webkit justify and align fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,7 @@ h4, h5{
     line-height: 80px;
     display: flex;
     justify-content: center;
+    -webkit-justify-content: center;
     transition: .3s;
 }
 
@@ -47,7 +48,9 @@ h4, h5{
     margin: 0 auto;
     display: flex;
     justify-content: center;
+    -webkit-justify-content: center;
     align-items: center;
+    -webkit-align-items: center;
     resize: none;
     overflow: auto;
     flex-direction: column;
@@ -105,6 +108,7 @@ h4, h5{
     display: -webkit-flex;
     display: flex;
     align-items: center;
+    -webkit-align-items: center;
 }
 
 @media (max-width: 1100px){
@@ -125,7 +129,9 @@ h4, h5{
         display: -webkit-flex;
         display: flex;
         align-items: center;
+        -webkit-align-items: center;
         justify-content: center;
+        -webkit-justify-content: center;
         transition: .3s;
     }
     #mobile-nav:hover{
@@ -242,7 +248,9 @@ h4, h5{
     display: -webkit-flex;
     display: flex;
     align-items: center;
+    -webkit-align-items: center;
     justify-content: center;
+    -webkit-justify-content: center;
 }
 
 .modal-dialog{
